2005-10-28  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/Makefile.am: 
	Make X -> Xorg symlink at install time.
	
2005-10-21  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #4840: Typo, x$xRES -> x$RES.  (George Fufutos)

2005-10-20  Donnie Berkholz  <spyderous@gentoo.org>

	* configure.ac: Bug #4817 <https://bugs.freedesktop.org/show_bug.cgi?id=4817>
	Restore '=' to '==' in test for mmx_capable.

2005-10-18  Adam Jackson  <ajax@freedesktop.org>

	* XTrap/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	Move xf86XTrapModule.c to dixmods, guess at a build system.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.
	Update release string to 6.99.99.901 (i.e., 7.0 RC1).

2005-10-18  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/config/Makefile.am:
	Fix parallel builds my ensuring libdmxconfig builds first.

	* hw/xfree86/Makefile.am:
	Fix distcheck by forcing Xorg to be installed before chmod/chown.

2005-10-18  Alan Coopersmith  <alan.coopersmith@sun.com>

	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Don't use $< in explicit rules since neither BSD nor Solaris make
	allow that.

2005-10-17  Aaron Plattner  <aplattner@nvidia.com>

	* hw/xfree86/loader/Makefile.am:
	Add miext/damage so misym.c can export DamageDamageRegion.

2005-10-17  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Work around automake-1.7 braindamage by providing an explicit rule
	for XOrgCfg.

	* hw/xfree86/Makefile.am:
	More automake 1.7 braindamage: use mkdir -p, not $(mkdir_p).

2005-10-17  Kristian Høgsberg  <krh@redhat.com>

	* configure.ac: Fix whitespace in AS_HELP_STRING uses, convert
	all help strings to use AS_HELP_STRING.

2005-10-17  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* Xext/Makefile.am:
	* include/dix-config.h.in
	Add support for more extensions

	* GL/Makefile.am:
	* XTrap/Makefile.am:
	* hw/xfree86/os-support/Makefile.am: